[package]
name         = "ccm-egui"
version      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ccm-impl  = { workspace = true }
ccm-image = { workspace = true }
image     = { workspace = true }

eframe = { version = "0.24.1" }
