[package]
name         = "ccm-tools"
version      = { workspace = true }
authors      = { workspace = true }
license      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ccm-impl  = { workspace = true }
ccm-image = { workspace = true }
image     = { workspace = true }
